[package]
name = "wildkv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "d592f88e4dbba5eb439998463054f1a44fbf17b9" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_ignored = "0.1"
serde_json = "1.0"
toml = "0.5"
wildkv_util = { path = "components/wildkv_util", default-features = false }

[workspace]
members = [
    "cmd/wildkv-server",
    "components/wildkv_util"
]
default-members = ["cmd/wildkv-server"]
