[package]
name = "wildkv-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32"
toml = "0.5"
wildkv = { path = "../../", default-features = false }
server = { path = "../../components/server", default-features = false }